fixed profile image area and page section wrapping

--- a/app/assets/stylesheets/pdf_cv_builder.scss
+++ b/app/assets/stylesheets/pdf_cv_builder.scss
@@ -487,7 +487,7 @@ ul {
 .page{
   padding: 60px;
   width: 940px;
-  height: 1300px;
+  height: 1588px
 }
 .cv-builder .section-item{
   position: relative;
